--- a/msalAuth/auth.html
+++ b/msalAuth/auth.html
@@ -15,7 +15,7 @@
         let graphAPIScopes = ["https://graph.microsoft.com/user.read", "https://graph.microsoft.com/user.readwrite"];
 
         let userAgentApplication = new Msal.UserAgentApplication(
-            "9dd444f2-c90a-4848-add5-20d9be92591e",
+            "[your app id here from apps.dev.microsoft.com]",
             "https://login.microsoftonline.com/common",
             this.tokenReceivedCallback);
 
