--- a/msalAuth/config.html
+++ b/msalAuth/config.html
@@ -16,9 +16,9 @@ microsoftTeams.initialize();
 
         microsoftTeams.settings.setSettings({
          entityId: "test",
-         contentUrl: "https://paragpp.ngrok.io/default.aspx",
+         contentUrl: "[your default landing page/content url]",
          suggestedDisplayName: "Test Tab",
-         websiteUrl: "https://paragpp.ngrok.io"
+         websiteUrl: "[your website url]"
       });
         saveEvent.notifySuccess();
         });
